--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "test": "yarn test:lint && yarn test:flow && yarn test:unit && yarn test:integration",
     "update": "updtr",
     "watch": "./node_modules/.bin/watch 'yarn build' src",
-    "precommit": "yarn lint && yarn flow && git add API.md"
+    "precommit": "yarn lint && yarn flow && git add API.md",
+    "connector": "./node_modules/.bin/nodemon -w server --exec ./node_modules/.bin/babel-node -- ./bin/start"
   },
   "dependencies": {
+    "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "JSONStream": "^1.1.2",
     "aws-sdk": "^2.224.1",
@@ -52,6 +54,7 @@
     "body-parser": "^1.18.3",
     "bull": "^3.0.0-rc.3",
     "cache-manager": "2.9.0",
+    "commander": "^2.18.0",
     "connect": "^3.4.1",
     "connect-timeout": "^1.8.0",
     "csv-stream": "^0.2.0",
@@ -91,7 +94,7 @@
     "newrelic": "^4.1.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
+    "@babel/cli": "^7.1.2",
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-flow-comments": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -119,6 +122,7 @@
     "mocha": "^5.0.4",
     "nock": "^9.2.3",
     "node-mocks-http": "^1.7.0",
+    "nodemon": "^1.18.4",
     "nyc": "^13.0.1",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.0",
