--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/hull/hull-node/issues"
   },
   "engines": {
-    "node": ">=6.12.0"
+    "node": ">=8.x"
   },
   "author": "Romain Dardour <romain@hull.io>",
   "license": "MIT",
@@ -33,81 +33,81 @@
     "precommit": "npm run documentation && git add API.md"
   },
   "dependencies": {
-    "JSONStream": "^1.1.2",
-    "aws-sdk": "^2.81.0",
+    "JSONStream": "^1.3.5",
+    "aws-sdk": "^2.849.0",
     "babel-polyfill": "^6.26.0",
     "basic-auth": "^1.1.0",
     "batch-stream": "^0.1.3",
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.15.2",
-    "bull": "^3.0.0-rc.3",
-    "cache-manager": "2.6.0",
-    "connect": "^3.4.1",
-    "connect-timeout": "^1.8.0",
-    "csv-stream": "^0.1.3",
-    "datadog-metrics": "^0.4.0",
-    "debug": "^3.1.0",
-    "del": "^2.2.1",
-    "dogapi": "^2.6.0",
-    "ejs": "^2.5.6",
-    "hull-client": "^2.0.0",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "bull": "^3.20.1",
+    "cache-manager": "2.11.1",
+    "connect": "^3.7.0",
+    "connect-timeout": "^1.9.0",
+    "csv-stream": "^0.2.0",
+    "datadog-metrics": "^0.9.1",
+    "debug": "^3.2.7",
+    "del": "^2.2.2",
+    "dogapi": "^2.8.3",
+    "ejs": "^2.7.4",
+    "hull-client": "^2.0.4",
     "jsonwebtoken": "^7.4.3",
-    "jwt-simple": "^0.5.0",
-    "kue": "^0.11.5",
+    "jwt-simple": "^0.5.6",
+    "kue": "^0.11.6",
     "kue-ui": "^0.1.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.2",
-    "newrelic": "^4.1.4",
-    "passport": "^0.3.2",
-    "progress-bar-webpack-plugin": "^1.11.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "newrelic": "^7.1.1",
+    "passport": "^0.4.1",
+    "progress-bar-webpack-plugin": "^1.12.1",
     "promise-streams": "^1.0.1",
     "promisepipe": "^2.1.3",
-    "raven": "^2.4.2",
-    "raw-body": "^2.1.7",
-    "react-hot-loader": "^4.2.0",
+    "raven": "^2.6.4",
+    "raw-body": "^2.4.1",
+    "react-hot-loader": "^4.13.0",
     "request": "^2.72.0",
-    "sns-validator": "^0.3.0",
-    "sqs-consumer": "^3.6.1",
+    "sns-validator": "^0.3.4",
+    "sqs-consumer": "^3.8.0",
     "supply": "0.0.4",
-    "urijs": "^1.18.7",
-    "uuid": "^3.3.2",
+    "urijs": "^1.19.6",
+    "uuid": "^3.4.0",
     "webpack": "^3.12.0",
     "webpack-dev-middleware": "^2.0.6",
-    "webpack-hot-middleware": "^2.22.2"
+    "webpack-hot-middleware": "^2.25.0"
   },
   "peerDependencies": {
-    "express": "^4.16.3",
-    "newrelic": "^4.1.4"
+    "express": "^4.17.1",
+    "newrelic": "^4.13.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-flow-comments": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-register": "^6.9.0",
+    "babel-register": "^6.26.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "documentation": "^6.3.3",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-import": "^2.2.0",
-    "flow-bin": "^0.74.0",
-    "flow-typed": "^2.4.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.22.1",
+    "flow-bin": "^0.145.0",
+    "flow-typed": "^2.6.2",
     "husky": "^0.14.3",
-    "isparta": "^4.0.0",
-    "minihull": "^3.0.0",
-    "mkdirp": "^0.5.1",
-    "mocha": "^3.0.0",
-    "nock": "^9.2.3",
-    "node-mocks-http": "^1.7.0",
-    "nyc": "^11.0.3",
-    "rimraf": "^2.6.0",
-    "sinon": "^2.2.0",
-    "sinon-chai": "^2.10.0",
-    "superagent": "^3.8.2",
-    "supertest": "^3.1.0",
+    "isparta": "^4.1.1",
+    "minihull": "^3.0.2",
+    "mkdirp": "^0.5.5",
+    "mocha": "^3.5.3",
+    "nock": "^9.6.1",
+    "node-mocks-http": "^1.10.1",
+    "nyc": "^11.9.0",
+    "rimraf": "^2.7.1",
+    "sinon": "^2.4.1",
+    "sinon-chai": "^2.14.0",
+    "superagent": "^3.8.3",
+    "supertest": "^3.4.2",
     "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
