--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test:coverage": "nyc --babel-cache --hook-run-in-context false npm run test",
     "update": "updtr",
     "clean": "rimraf lib",
-    "build": "npm run clean && babel src -d lib",
-    "dev": "babel src -d lib -w",
+    "build": "npm run clean && npx babel src -d lib",
+    "dev": "npx babel src -d lib -w",
     "prepublish": "npm run build",
     "documentation": "documentation build src -f md -o API.md --access public --markdownToc=false",
     "precommit": "npm run documentation && git add API.md"
