--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "connect": "^3.4.1",
     "connect-timeout": "^1.8.0",
     "csv-stream": "^0.1.3",
-    "datadog-metrics": "^0.4.0",
+    "datadog-metrics": "0.9.3",
     "del": "^2.2.1",
-    "dogapi": "^2.6.0",
+    "dogapi": "2.8.4",
     "ejs": "^3.1.7",
     "hull-client": "1.2.4",
     "jsonwebtoken": "^7.4.3",
@@ -82,7 +82,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "documentation": "^6.1.0",
+    "documentation": "^13.2.5",
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
@@ -114,5 +114,8 @@
     "include": [
       "src"
     ]
+  },
+  "resolutions": {
+    "ngrok": "^4.3.1"
   }
 }
